# face_recognition

./: .gitignore  CMakeLists.txt  README.md  face_recognation.h  main.cpp  show-camera.cpp
